test/mutation_analysis/s0044_wildcard_matching/hafis/starchat/mutants/53/result.txt
./test/mutation_analysis/s0044_wildcard_matching/hafis/starchat/mutants/53/Solution.java:50: error: unreachable statement
        while (false) {
                      ^
1 error
